--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
 			
 			<img id="cspio-logo" src="/companylogo.png">
 			    				
-			<h1 id="cspio-headline">Faithful Photos</h1>			    				
+			<h1 id="cspio-headline">Behold Beauty</h1>			    				
 			
 			<div id="cspio-description">Come back soon, website under maintenance!</div>			    				
 			
