--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 	<div id="cspio-page">
 		<div id="cspio-content">
 			
-			<img id="cspio-logo" src="/companylogo.png">
+			<img id="cspio-logo" src="companylogo.png">
 			    				
 			<h1 id="cspio-headline">Behold Beauty</h1>			    				
 			
