--- a/index.html
+++ b/index.html
@@ -306,12 +306,12 @@
 				</div>
 			</form>
 			
-			<span id="cspio-privacy-policy-txt">We promise to never spam you.</span>
+			<span id="cspio-privacy-policy-txt">Call <p>I will display &#9742;</p> +44 (0)20 3289 2232</span>
 			    						    			    								    			    			    				
 			<div id="cspio-socialprofiles">
 				<a href="" target="_blank"><i class="fa fa-facebook-official fa-2x"></i></a>			
 				<a href="" target="_blank"><i class="fa fa-twitter fa-2x"></i></a>			
-				<a href="mailto:martin.adams@faithful.photos" target="_top"><i class="fa fa-envelope fa-2x"></i></a>			
+				<a href="mailto:maximus.rockford@faithful.photos" target="_top"><i class="fa fa-envelope fa-2x"></i></a>			
 			</div>
 
 			<div id="cspio-credit">
