--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 				</div>
 			</form>
 			
-			<span id="cspio-privacy-policy-txt">Call <p>I will display &#9742;</p> +44 (0)20 3289 2232</span>
+			<span id="cspio-privacy-policy-txt">Call <p>&#9742;</p> +44 (0)20 3289 2232</span>
 			    						    			    								    			    			    				
 			<div id="cspio-socialprofiles">
 				<a href="" target="_blank"><i class="fa fa-facebook-official fa-2x"></i></a>			
