--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	
 	html{
 		height:100%;
-		background: <img src="background.jpg">;
+		background=<img src="background.jpg">;
 		no-repeat center bottom fixed;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
