--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 	
 	html{
 		height:100%;
-		background: #ffffff <img id="cspio-background" src="background.jpg">;
+		background: #ffffff url(https://i.ibb.co/h8zW58r/background.jpg);
 		no-repeat center bottom fixed;
 		-webkit-background-size: cover;
 		-moz-background-size: cover;
