--- a/index.html
+++ b/index.html
@@ -123,10 +123,15 @@
 		font-family: 'Pacifico';
 		font-weight: 400;
 		font-style: ;
-				font-size: 48px;
+		font-size: 48px;
 		color:#ffffff;
-		line-height: 1.00em;
+		line-height: 1.00e
 	}
+
+	 #cspio-privacy-policy-txt{
+                display: inline-block;
+                font-size: 25px;
+     }
 
 	.cspio button{
         font-family: Helvetica, Arial, sans-serif;
