--- a/index.html
+++ b/index.html
@@ -129,8 +129,9 @@
 	}
 
 	 #cspio-privacy-policy-txt{
-                display: inline-block;
-                font-size: 24px;
+                 display: inline-block;
+		 font-family: nexa slab,
+                 font-size: 24px;
      }
 
 	.cspio button{
