--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
 			<span id="cspio-privacy-policy-txt">Call <p>&#9742;</p> +44 (0)20 8133 9949</span>
 			    						    			    								    			    			    				
 			<div id="cspio-socialprofiles">			
-				<a href="mailto:maximus.rockford@faithful.photos" target="_top"><i class="fa fa-envelope fa-1x"></i></a>			
+				<a href="mailto:hello@faithful.photos" target="_top"><i class="fa fa-envelope fa-1x"></i></a>			
 			</div>
 
 			<div id="cspio-credit">
