--- a/index.html
+++ b/index.html
@@ -307,11 +307,9 @@
 			
 			<span id="cspio-privacy-policy-txt">Call <p>&#9742;</p> +44 (0)20 8133 9949</span>
 			    						    			    								    			    			    				
-			<div id="cspio-socialprofiles">			
-				
-				<a href="mailto:hello@faithful.photos" target="_top"><i class="fa fa-envelope fa-1x"></i></a>			
+			<div id="cspio-socialprofiles"><a href="mailto:hello@faithful.photos" target="_top"><i class="fa fa-envelope fa-1x"></i></a>			
 			</div>
-
+			
 			<div id="cspio-credit">
 					<span>Created with <a target="_blank" href="https://www.comingsoonpage.com"><img id="aff" src="https://static.comingsoonpage.com/cspio-assets/1.0.0/comingsoonpage.com-logo.png" alt="Created by ComingSoonPage.com"></a> Free download <a target="_blank" href="http://www.seedprod.com/free-coming-soon-page/" style="text-decoration:underline" alt="Get your free coming soon page.">here.</a>
 				</span></div>
