--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 			    				
 			<h1 id="cspio-headline">Behold Beauty</h1>
 			
-			</span><a href="https://faithful.photos/profile.html" title="Profile">Portfolio</a>
+			<span/><a href="https://faithful.photos/profile.html" title="Profile">Portfolio</a>
                        
 			<a href="https://faithful.photos/plans.html" title="Plans">Pricing</a></span>
 
