--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
 			<a href="https://faithful.photos/plans.html" title="Plans">Pricing</a></span>
 			</div>
 
-			<span id="cspio-privacy-policy-txt">Call <p>&#9742;</p> +44 (0)20 8133 9949</span>
+			<span id="cspio-privacy-policy-txt">Call <p>&#9742;</p> +44 (0)20 8133 9949 / +1 (702) 833 9822</span>
 			    						    			    								    			    			    				
 			<div id="cspio-socialprofiles"><a href="mailto:hello@faithful.photos" target="_top"><i class="fa fa-envelope fa-1x"></i></a>			
 			</div>
